2003-01-21  David Hyatt  <hyatt@apple.com>

	Fix for regressions on layout-tests caused by new table code.
	Make sure cell's padding is used and not just the table's cellpadding.
	
        Reviewed by darin.

        * khtml/rendering/table_layout.cpp:
        (AutoTableLayout::recalcColumn):

2003-01-21  Darin Adler  <darin@apple.com>

        - correct our copyrights to 2003; copyright is based on year of publication, not year worked on

2003-01-21  David Hyatt  <hyatt@apple.com>

	Fix for the 2.5% perf regression from the descendant rules
	changes.  This patch does 3 things:
	(1) Fix the descendant rule check in the CSS parser. It
	was incorrect.
	(2) Fix DOM insertion/removal from setting the parent as needing
	a style re-resolve.
	(3) Fix whitespace inside <html> so that it doesn't make a premature
	<body>.
	
        Reviewed by mjs

        * khtml/css/cssparser.cpp:
        (StyleBaseImpl::parseSelector):
        * khtml/html/htmlparser.cpp:
        (KHTMLParser::insertNode):
        * khtml/xml/dom_elementimpl.cpp:
        (ElementImpl::recalcStyle):
        * khtml/xml/dom_nodeimpl.cpp:
        (NodeBaseImpl::insertBefore):
        (NodeBaseImpl::replaceChild):
        (NodeBaseImpl::removeChild):
        (NodeBaseImpl::appendChild):

2003-01-21  Darin Adler  <darin@apple.com>

        Reviewed by Richard.

	- clean room rewrite of QCString

        * kwq/KWQCString.mm: Replaced functions that needed rewrite.

2003-01-21  Richard Williamson   <rjw@apple.com>

        Added support to pause and resume javascript timers.  This allows pages 
        that have javascript timers to be added to the page cache.
        
        Fixes 3126138.
        
        Reviewed by trey and maciej.

        * khtml/ecma/kjs_window.cpp:
        (Window::pauseTimeouts):
        (Window::resumeTimeouts):
        (WindowQObject::pauseTimeouts):
        (WindowQObject::resumeTimeouts):
        (WindowQObject::timerEvent):
        * khtml/ecma/kjs_window.h: